<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#22673AB7"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/selamat_datang"
            android:textColor="#9C27B0"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="243dp"
            android:layout_height="174dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/content_desc_logo_image"
            app:srcCompat="@drawable/zyroimage" />

        <TextView
            android:id="@+id/silakan"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:text="@string/pendahuluan"
            android:textColor="#7B1FA2"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/kode_barang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/kodebarang_discount"
            android:inputType="text"
            android:textColorHint="#37474F"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/jumlah_barang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/jumlah_barang"
            android:inputType="number"
            android:textColorHint="#37474F"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_kalkulasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="#9C27B0"
            android:text="@string/kalkulasi"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_result"
            android:layout_width="match_parent"
            android:layout_height="315dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:drawablePadding="8dp"
                android:text="@string/nama_barang"
                android:textColor="#7B1FA2"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_nama_barang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_barang"
                android:textColor="#455A64"
                android:textSize="16sp"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="8dp"
                android:text="@string/harga_barang"
                android:textColor="#7B1FA2"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_harga_barang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga_barang"
                android:textColor="#455A64"
                android:textSize="16sp"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="8dp"
                android:text="@string/total_harga"
                android:textColor="#7B1FA2"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_total_harga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_harga"
                android:textColor="#455A64"
                android:textSize="16sp"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="8dp"
                android:text="@string/discount"
                android:textColor="#7B1FA2"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:textColor="#455A64"
                android:textSize="16sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/tv_text_jumlah_bayar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#9C27B0"
                android:drawablePadding="8dp"
                android:text="@string/jumlah_bayar"
                android:textColor="#7B1FA2"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_jumlah_bayar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginTop="10dp"
                android:background="#9C27B0"
                android:gravity="center"
                android:text="@string/jumlah_bayar"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal|bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>